# phoenixtools_py

./: FEATURE_MAP.md  README.md  phoenixtools.spec  pyproject.toml
packaging/: build_windows.ps1  entrypoint.py
src/phoenixtools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/phoenixtools_app/: __main__.py
src/phoenixtools_app/db/: engine.py  models.py
src/phoenixtools_app/importer/: market_xml.py  nexus_html.py  nexus_xml.py  parsers.py
src/phoenixtools_app/services/: app_bootstrap.py  base_reports.py  full_refresh.py  hub_link.py  import_cbodies.py  import_jump_map.py  import_market.py  import_setup.py  import_turn.py  pathing.py  phoenix_order.py  shipping_jobs.py  trade_routes.py
src/phoenixtools_app/ui/: bases_page.py  celestial_bodies_page.py  data_browser_page.py  items_page.py  main_window.py  star_systems_page.py  trade_routes_page.py
